[package]
name = "bustubrust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.3"
dashmap = "4.0.2"
ghost-cell = "0.2.2"
libc = "0.2.113"
lock_api = "0.4.6"
lru = "0.7.2"
parking_lot = "0.12.0"
rand = "0.8.4"
tempfile = "3.3.0"



[[bin]]
name= "play"
path = "play/main.rs"

[[bin]]
name= "bpm"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
[profile.release]
opt-level = 3
debug = false
