[package]
name = "bustubrust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
bincode = "1.3.3"
byte-slice-cast = "1.2.1"
bytemuck = "1.7.3"
crossbeam = "0.8.1"
crossbeam-epoch = "0.9.6"
dashmap = "4.0.2"
derivative = "2.2.0"
fragile = "1.1.0"
ghost-cell = "0.2.2"
iota = "0.2.2"
itertools = "0.10.3"
libc = "0.2.113"
lock_api = "0.4.6"
lru = "0.7.2"
owning_ref = "0.4.1"
parking_lot = "0.12.0"
rand = "0.8.4"
serde = "1.0.136"
serde_derive = "1.0.136"
tempfile = "3.3.0"
tinyvec = "1.5.1"
twox-hash = "1.6.2"
xxhash-rust = "0.8.3"
zerocopy = "0.6.1"

[features]
default=["testing"]
testing=["parking_lot/deadlock_detection"]


[lib]
name = "bustubrust"
path = "src/lib.rs"

# [lib]
# name = "playlib"
# path = "play/lib.rs"

[[bin]]
name= "play"
path = "play/main.rs"

[[bin]]
name= "bpm"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
[profile.release]
opt-level = 3
debug = false
