[package]
name = "mvcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "mvcc"
path = "src/lib.rs"

[dependencies]
crossbeam-channel = "0.5.6"
crossbeam-utils = "0.8.11"
dashmap = "5.4.0"
parking_lot = "0.12.1"
