[package]
name = "mvcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "mvcc"
path = "src/lib.rs"


[[bin]]
name = "mvccbin"
path = "play/main.rs"

[dependencies]
byteorder = "1.4.3"
crossbeam-channel = "0.5.6"
crossbeam-utils = "0.8.11"
dashmap = "5.4.0"
lazy_static = "1.4.0"
libc = "0.2.135"
log = "0.4.17"
object-pool = "0.5.4"
parking_lot = "0.12.1"
rand = "0.8.5"
