[package]
name = "sql"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
arrayvec = "0.7.2"
async-stream = "0.3.3"
async-trait = "0.1.53"
bincode = "1.3.3"
byte-slice-cast = "1.2.1"
bytemuck = "1.7.3"
comfy-table = "5.0.1"
crossbeam = "0.8.1"
crossbeam-epoch = "0.9.6"
dashmap = "4.0.2"
datafusion = "7.0.0"
derivative = "2.2.0"
fragile = "1.1.0"
futures = "0.3.21"
futures-core = "0.3.21"
futures-util = "0.3.21"
ghost-cell = "0.2.2"
hashbrown = "0.12.0"
iota = "0.2.2"
itertools = "0.10.3"
libc = "0.2.113"
lock_api = "0.4.6"
lru = "0.7.2"
owning_ref = "0.4.1"
parking_lot = "0.12.0"
pin-project = "1.0.10"
rand = "0.8.4"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sled = "0.34.7"
smallvec = "1.8.0"
tempfile = "3.3.0"
tinyvec = "1.5.1"
tokio = "1.17.0"
twox-hash = "1.6.2"
xxhash-rust = "0.8.3"
zerocopy = "0.6.1"

# [features]
# default=["testing"]
# testing=["parking_lot/deadlock_detection"]





[lib]
name= "sql"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true
[profile.release]
opt-level = 3
debug = false
